--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,9 @@ jobs:
         steps:
           - name: Checkout
             uses: actions/checkout@v4
-
+            with:
+                fetch-depth: 0
+            
           - name: Install pnpm
             uses: pnpm/action-setup@v3
             with:
